2015-02-27  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (alloc_sd): For directories, mark inherited ACEs
	inheritable to better follow POSIX 1003.1e rules.

2015-02-27  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (getacl): Add mask even if all group and secondary account
	permissions are 0.

2015-02-27  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (pwdgrp::fetch_account_from_windows): Drop redundant test
	for SidTypeUser.

2015-02-27  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (setacl): Fix bug which leads to ACE duplication in
	case owner SID == group SID.
	(getacl): Reverse order of SID test against group or owner sid to
	prefer owner attributes over group attributes.  Disable setting group
	permissions equivalent to owner permissions if owner == group.  Add
	comment to explain why.  Fix indentation.
	* security.cc (get_attribute_from_acl): Change type of local variables
	containing permission to mode_t.  Apply deny mask to group if group SID
	== owner SID to avoid Everyone permissions to spill over into group
	permissions.  Disable setting group permissions equivalent to owner
	permissions if owner == group.  Add comment to explain why.
	* uinfo.cc (pwdgrp::fetch_account_from_windows): Allow user SID as
	group account if user is a "Microsoft Account".  Explain why.  Drop
	workaround enforcing primary group "Users" for "Microsoft Accounts".

2015-02-26  Corinna Vinschen  <corinna@vinschen.de>

	* ldap.cc (cyg_ldap::wait): Call cygwait with cw_infinite timeout value
	and with cw_sig_restart instead of cw_sig_eintr.  Drop useless
	_my_tls.call_signal_handler call.  Return EIO if cygwait failed.

2015-02-26  Corinna Vinschen  <corinna@vinschen.de>

	* posix_ipc.cc (ipc_mutex_lock): Revert unneeded call to signal handler.

2015-02-26  Corinna Vinschen  <corinna@vinschen.de>

	* posix_ipc.cc (ipc_mutex_lock): Add bool parameter to influence if
	cygwait should be in EINTR or in restart mode.  Call signal handler